[package]
name = "jwks"
version = "0.5.2"
edition = "2021"
authors = ["Hung-Han Chen <chenhungh@gmail.com>"]
description = "A library for retrieving and parsing JSON Web Key Sets (JWKS)"
license-file = "LICENSE"
repository = "https://github.com/chenhunghan/jwks"
readme = "README.md"
keywords = ["jwt", "jsonwebtoken", "jwks"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
jsonwebtoken = "10.2.0"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.195", features = ["derive"] }
thiserror = "2"

[features]
default = ["rust_crypto"]
aws_lc_rs = ["jsonwebtoken/aws_lc_rs"]
rust_crypto = ["jsonwebtoken/rust_crypto"]

[dev-dependencies]
httpmock = "0.7"
serde_json = "1"
rsa = "0.9"
p256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.35.1", features = ["full"] }
